code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Jul-2013 Jean-Marie Simonet
 # [#31321] Fixed issue with tooltip text not being escaped when no title is given. Thanks Peter van Westen
 # [#31322] Made title of search boxes show as tooltip. Thanks Peter van Westen

01-Jul-2013 Jean-Marie Simonet
 ^ [#30849] Show alias for menu items on menu assignement. Thanks David Hurley
 $ Updating Installation lang files: ar-AA, fi-FI, ja-JP, sy-IQ, uk-UA
 # [#31229] Fixed: DebugGroup not working. Thanks Peter van Westen
 # [#31066] Cleanup Tag Storing. Thanks Nicolas Dionysopoulos and Elin Waring.
 # [#31280] Loadmodule support for htmlspecialchars in title. Thanks Peter Wiseman

01-Jul-2013 Elin Waring
 # [#31298] Drop downs on menu item edit are broken. Corrects #31060.

30-Jun-2013 Jean-Marie Simonet
 # [#31188] Fixed issue with not being able to select color white. Thanks Peter van Westen
 # [#31098] *UX Suggestions for Batch button

29-Jun-2013 Jean-Marie Simonet
 $ [#27307] English only: weblink or web link. Web Link or Web link. Thanks George Wilson
 # [#31285] Joomla Installation is broken with the current git!

28-Jun-2013 Jean-Marie Simonet
 # Correcting #31772
 ^ [#31267] *Switching to Bootstrap tooltips. Thanks Peter van Westen and Michael Babker.
 #^ [#31143] Registration with invalid password when non-core template. Thansk Elin Waring
 # [#31172] X at hathor messages. Thanks Tobias Zulauf
 ^ [#31087] Add SQL queries profiler in Debug zone with backtrace of call and EXPLAIN hovers. Thanks Beat
 ^ [#31060] Show item title on the Edit page
 ^ [#31100] UX "showon": Dynamic options in the Joomla Backend. Thanks Jérôme GLATIGNY

27-Jun-2013 Elin Waring
 $ [#31272] Fix tags help screen views. Thanks George Wilson
 ^ [#1313] Simplify magic getters in third party API classes. Thanks Michael Babker

27-Jun-2013 Michael Babker