@@ -28,7 +28,7 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
   		<thead>
   			<tr>
   				<th width="20">
-  					<input type="checkbox" name="checkall-toggle" value="" title="<?php echo JText::_('JGLOBAL_CHECK_ALL'); ?>" onclick="Joomla.checkAll(this)" />
+  					<?php echo JHtml::_('grid.checkall'); ?>
   				</th>
   				<th class="title nowrap">
   					<?php echo JHtml::_('grid.sort',  'COM_CACHE_GROUP', 'group', $listDirn, $listOrder); ?>
