@@ -40,7 +40,7 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
   		<table class="table table-striped">
   			<thead>
   				<tr>
-  					<th width="20"><input type="checkbox" name="checkall-toggle" value="" title="<?php echo JText::_('JGLOBAL_CHECK_ALL'); ?>" onclick="Joomla.checkAll(this)" /></th>
+  					<th width="20"><?php echo JHtml::_('grid.checkall'); ?></th>
   					<th class="nowrap"><?php echo JHtml::_('grid.sort', 'COM_INSTALLER_HEADING_NAME', 'name', $listDirn, $listOrder); ?></th>
   					<th class="center"><?php echo JHtml::_('grid.sort', 'COM_INSTALLER_HEADING_TYPE', 'type', $listDirn, $listOrder); ?></th>
   					<th width="10%" class="center"><?php echo JText::_('JVERSION'); ?></th>
