@@ -37,7 +37,7 @@ $version = new JVersion;
 				<thead>
 					<tr>
 						<th width="20" class="nowrap hidden-phone">
-							<input type="checkbox" name="checkall-toggle" value="" title="<?php echo JText::_('JGLOBAL_CHECK_ALL'); ?>" onclick="Joomla.checkAll(this)" />
+							<?php echo JHtml::_('grid.checkall'); ?>
 						</th>
 						<th class="nowrap">
 							<?php echo JHtml::_('grid.sort', 'COM_INSTALLER_HEADING_NAME', 'name', $listDirn, $listOrder); ?>
