@@ -79,7 +79,7 @@ $sortFields = $this->getSortFields();
 		<thead>
 			<tr>
 				<th width="1%" class="nowrap center">
-					<input type="checkbox" name="checkall-toggle" value="" title="<?php echo JText::_('JGLOBAL_CHECK_ALL'); ?>" onclick="Joomla.checkAll(this)" />
+					<?php echo JHtml::_('grid.checkall'); ?>
 				</th>
 				<th class="left">
 					<?php echo JHtml::_('grid.sort', 'COM_USERS_HEADING_NAME', 'a.name', $listDirn, $listOrder); ?>
