@@ -111,6 +111,24 @@ abstract class JHtmlGrid
 	}
 
 	/**
+	 * Method to check all checkboxes in a grid
+	 *
+	 * @param   string  $name           The name of the form element
+	 * @param   string  $tip            The text shown as tooltip title instead of $tip
+	 * @param   string  $action         The action to perform on clicking the checkbox
+	 *
+	 * @return  string
+	 *
+	 * @since   3.1.2
+	 */
+	public static function checkall($name = 'checkall-toggle', $tip = 'JGLOBAL_CHECK_ALL', $action = 'Joomla.checkAll(this)')
+	{
+		JHtml::_('bootstrap.tooltip');
+
+		return '<input type="checkbox" name="' . $name . '" value="" class="hasTooltip" title="' . JHtml::tooltipText($tip) . '" onclick="' . $action . '" />';
+	}
+
+	/**
 	 * Method to create a checkbox for a grid row.
 	 *
 	 * @param   integer  $rowNum      The row index
